--- a/snippets/mega.liquid
+++ b/snippets/mega.liquid
@@ -28,32 +28,10 @@
           <p class="mega__wrap__column__sublink"><a href="{{ collections.frontpage.url }}">View more</a></p>
 
           {% comment %}
-            Breast Feeding
-          {% endcomment %}
-          <h6 class="mega__wrap__column__link">
-            <a class="" href="{{ collections.breast-feeding.url }}"><b>Breast Feeding</b></a>
-          </h6>
-          {% for product in collections['breast-feeding'].products limit: 2 %}
-            <p class="mega__wrap__column__sublink">
-              <a
-                href="{{ product.url }}"
-                class="[ js-mega-image ]"
-                data-id="{{ product.title }}"
-                data-image="{{ product.featured_image | image_url: width: 160 | image_url: height: 160 }}"
-              >
-                {{- product.title -}}
-              </a>
-            </p>
-          {% endfor %}
-          <p class="mega__wrap__column__sublink">
-            <a href="{{ collections.breast-feeding.url }}">View more</a>
-          </p>
-
-          {% comment %}
             V-DELIVERY
           {% endcomment %}
           <h6 class="mega__wrap__column__link">
-            <a class="" href="{{ collections.c-section-delivery.url }}"><b>C-Section Delivery</b></a>
+            <a class="" href="{{ collections.c-section-delivery.url }}"><b>c-section-delivery</b></a>
           </h6>
           {% for product in collections['c-section-delivery'].products limit: 2 %}
             <p class="mega__wrap__column__sublink">
@@ -99,7 +77,7 @@
             post-partum
           {% endcomment %}
           <h6 class="mega__wrap__column__link">
-            <a class="" href="{{ collections.post-partum.url }}"><b>Post Partum</b></a>
+            <a class="" href="{{ collections.post-partum.url }}"><b>post-partum</b></a>
           </h6>
           {% for product in collections['post-partum'].products limit: 2 %}
             <p class="mega__wrap__column__sublink">
@@ -116,6 +94,40 @@
           <p class="mega__wrap__column__sublink">
             <a href="{{ collections.post-partum.url }}">View more</a>
           </p>
+
+
+          {% comment %}
+            breast-feeding
+          {% endcomment %}
+          <h6 class="mega__wrap__column__link">
+            <a class="" href="{{ collections.breast-feeding.url }}"><b>breast-feeding</b></a>
+          </h6>
+          <p class="mega__wrap__column__sublink">
+            <a
+              href="{{ product.url }}"
+              class="[ js-mega-image ]"
+              data-id="{{ product.title }}"
+              data-image="{{ product.featured_image | image_url: width: 160 | image_url: height: 160 }}"
+            >
+              Coming Soon
+            </a>
+          </p>
+          {% for product in collections['breast-feeding'].products limit: 2 %}
+            <p class="mega__wrap__column__sublink">
+              <a
+                href="{{ product.url }}"
+                class="[ js-mega-image ]"
+                data-id="{{ product.title }}"
+                data-image="{{ product.featured_image | image_url: width: 160 | image_url: height: 160 }}"
+              >
+                {{- product.title -}}
+              </a>
+            </p>
+          {% endfor %}
+          <p class="mega__wrap__column__sublink">
+            <a href="{{ collections.breast-feeding.url }}">View more</a>
+          </p>
+
         </div>
 
           <div class="mega__wrap__column mega__wrap__column--blocked animated [ js-in-view ]">
