--- a/sections/main-list-collections.liquid
+++ b/sections/main-list-collections.liquid
@@ -32,6 +32,19 @@
             Item
           {% endcomment %}
           <a href="{{ product.url }}" class="collection-grid__list__item collection-grid__list__item--product">
+            <div
+              class="collections__slider__item__quickview [ js-show-quickview ]"
+              data-tooltip
+              data-id="{{ product.handle }}"
+              data-collection="{{ collection.title | upcase }}"
+            >
+              <svg xmlns="http://www.w3.org/2000/svg" width="19.707" height="19.708">
+                <path fill="#FFF" fill-rule="nonzero" d="M7.899 0c4.361 0 7.898 3.531 7.898 7.888 0 1.825-.62 3.505-1.663 4.841l5.573 5.563-1.414 1.416-5.577-5.569a7.87 7.87 0 0 1-4.817 1.637C3.537 15.776 0 12.245 0 7.888 0 3.53 3.537 0 7.899 0Zm0 2A5.893 5.893 0 0 0 2 7.888a5.893 5.893 0 0 0 5.899 5.888 5.893 5.893 0 0 0 5.898-5.888A5.893 5.893 0 0 0 7.899 2Z"></path>
+              </svg>
+              <div class="tooltip">
+                <div class="tooltip__wrap">Quick view</div>
+              </div>
+            </div>
             <div class="collection-grid__list__item__image">
               {% if product.featured_image %}
                 {{ product.featured_image | image_url: width: 400 | image_url: height: 400 | image_tag }}
