--- a/source/sections/product.scss
+++ b/source/sections/product.scss
@@ -233,16 +233,16 @@
     }
 }
 
-[data-theme="Pregnancy"] {
+[data-theme="pregnancy"] {
     .header-logo path {
         fill: var(--green);
     }
 }
 
 html {
-    [data-theme="Post Partum"],
-    [data-theme="C-Section Delivery"],
-    [data-theme="V-Delivery"] {
+    [data-theme="post-partum"],
+    [data-theme="c-section-delivery"],
+    [data-theme="v-delivery"] {
         background: var(--purple-light);
 
         a.link:not(.static),
@@ -398,7 +398,7 @@ html {
 }
 
 html {
-    [data-theme="Breast Feeding"] {
+    [data-theme="breast-feeding"] {
         background: var(--pink-light);
 
         a.link:not(.static),
