banner imagery upfates

--- a/sections/banner.liquid
+++ b/sections/banner.liquid
@@ -1,6 +1,9 @@
 <div class="banner banner--{{ section.settings.height }}">
   <div class="banner-image">
     <picture>
+      <!-- Larger screen image -->
+      <source srcset="{{ section.settings.image | image_url: width: 2560 | image_url: height: 1440  }}" media="(min-width: 1440px)">
+
       <!-- Large screen image -->
       <source srcset="{{ section.settings.image | image_url: width: 1920 | image_url: height: 967  }}" media="(min-width: 1280px)">
 
