--- a/sections/collections-block.liquid
+++ b/sections/collections-block.liquid
@@ -1,12 +1,13 @@
-<div class="collections">
+<div class="collections" data-theme="{%- for block in section.blocks -%}{% if forloop.first %}{{ block.settings.Collection.title | downcase | replace: " ", "-" }}{% endif %}{%- endfor -%}">
   {% comment %}
     Grid
   {% endcomment %}
   <div class="collections__grid collections__grid--{{ section.blocks.size }}">
+    <div class="collections__indicator [ js-indicator ]"></div>
     {%- for block in section.blocks -%}
       {% assign count = count | plus: 1 %}
       <div
-        class="collections__item [ js-collection-slider-trigger ]"
+        class="collections__item [ js-collection-slider-trigger ] {% if forloop.first %}active{% endif %}"
         data-id="{{ count }}"
         data-handle="{{ block.settings.Collection.handle }}"
         data-title="{{ block.settings.Collection.title }}"
@@ -19,82 +20,91 @@
           {%- endif -%}
         </div>
         <div class="collections__item__title">
-          <h3 class="colour--white">
+          <h4>
             <b>{{ block.settings.Collection.title }}</b>
-          </h3>
+          </h4>
         </div>
       </div>
     {%- endfor -%}
   </div>
 
-  {%- for block in section.blocks limit: 1 -%}
-    {% comment %}
-      Slider
-    {% endcomment %}
-
-    <div class="collections__slider [ js-inview ]">
+  <div class="collections__wrap">
+    {%- for block in section.blocks limit: 1 -%}
       {% comment %}
-        Item
+        Slider
       {% endcomment %}
-      <div class="collections__slider__item collections__slider__item--text">
-        <h2>
-          <b>{{ block.settings.Collection.title }}</b>
-        </h2>
-        <p>
-          <b>{{ block.settings.copy }}</b>
-        </p>
-        <p>
-          <a href="{{ block.settings.Collection.url }}" class="button">Shop all</a>
-        </p>
+
+      <div class="infinity-loader">
+        <svg viewBox="-2000 -1000 4000 2000">
+          <path id="inf" d="M354-354A500 500 0 1 1 354 354L-354-354A500 500 0 1 0-354 354z"></path>
+          <use xlink:href="#inf" stroke-dasharray="1570 5143" stroke-dashoffset="6713px"></use>
+        </svg>
       </div>
 
-      {%- for product in block.settings.Collection.products -%}
+      <div class="collections__slider [ js-inview ]">
         {% comment %}
           Item
         {% endcomment %}
-        <a href="{{ product.url }}" class="collections__slider__item collections__slider__item--product">
-          <div
-            class="collections__slider__item__quickview [ js-show-quickview ]"
-            data-tooltip
-            data-id="{{ product.handle }}"
-            data-collection="{{ block.settings.Collection.title | upcase }}"
-          >
-            <svg xmlns="http://www.w3.org/2000/svg" width="19.707" height="19.708">
-              <path fill="#FFF" fill-rule="nonzero" d="M7.899 0c4.361 0 7.898 3.531 7.898 7.888 0 1.825-.62 3.505-1.663 4.841l5.573 5.563-1.414 1.416-5.577-5.569a7.87 7.87 0 0 1-4.817 1.637C3.537 15.776 0 12.245 0 7.888 0 3.53 3.537 0 7.899 0Zm0 2A5.893 5.893 0 0 0 2 7.888a5.893 5.893 0 0 0 5.899 5.888 5.893 5.893 0 0 0 5.898-5.888A5.893 5.893 0 0 0 7.899 2Z"></path>
-            </svg>
-            <div class="tooltip">
-              <div class="tooltip__wrap">Quick view</div>
-            </div>
-          </div>
+        <div class="collections__slider__item collections__slider__item--text">
+          <h2>
+            <b>{{ block.settings.Collection.title }}</b>
+          </h2>
+          <p>
+            <b>{{ block.settings.copy }}</b>
+          </p>
+          <p>
+            <a href="{{ block.settings.Collection.url }}" class="button">Shop all</a>
+          </p>
+        </div>
 
-          <div class="collections__slider__item__image">
-            {% if product.featured_media %}
-              {{ product.featured_media | image_url: width: 400 | image_url: height: 400 | image_tag }}
-            {% else %}
-              <img
-                src="{{ 'placeholder.jpeg' | asset_url }}"
-                alt="placeholder image"
-                width="400"
-                height="400"
-                loading="lazy"
-              >
-            {% endif %}
-          </div>
-          <div class="collections__slider__item__title">
-            <h6>
-              <b>{{ product.title }}</b>
-            </h6>
-            <h6>
-              <b>{{ product.price | money }}</b>
-            </h6>
-          </div>
-          <div class="collections__slider__item__description">
-            <p>{{ product.metafields.custom.short_description }}</p>
-          </div>
-        </a>
-      {%- endfor -%}
-    </div>
-  {%- endfor -%}
+        {%- for product in block.settings.Collection.products -%}
+          {% comment %}
+            Item
+          {% endcomment %}
+          <a href="{{ product.url }}" class="collections__slider__item collections__slider__item--product">
+            <div
+              class="collections__slider__item__quickview [ js-show-quickview ]"
+              data-tooltip
+              data-id="{{ product.handle }}"
+              data-collection="{{ block.settings.Collection.title | upcase }}"
+            >
+              <svg xmlns="http://www.w3.org/2000/svg" width="19.707" height="19.708">
+                <path fill="#FFF" fill-rule="nonzero" d="M7.899 0c4.361 0 7.898 3.531 7.898 7.888 0 1.825-.62 3.505-1.663 4.841l5.573 5.563-1.414 1.416-5.577-5.569a7.87 7.87 0 0 1-4.817 1.637C3.537 15.776 0 12.245 0 7.888 0 3.53 3.537 0 7.899 0Zm0 2A5.893 5.893 0 0 0 2 7.888a5.893 5.893 0 0 0 5.899 5.888 5.893 5.893 0 0 0 5.898-5.888A5.893 5.893 0 0 0 7.899 2Z"></path>
+              </svg>
+              <div class="tooltip">
+                <div class="tooltip__wrap">Quick view</div>
+              </div>
+            </div>
+
+            <div class="collections__slider__item__image">
+              {% if product.featured_media %}
+                {{ product.featured_media | image_url: width: 400 | image_url: height: 400 | image_tag }}
+              {% else %}
+                <img
+                  src="{{ 'placeholder.jpeg' | asset_url }}"
+                  alt="placeholder image"
+                  width="400"
+                  height="400"
+                  loading="lazy"
+                >
+              {% endif %}
+            </div>
+            <div class="collections__slider__item__title">
+              <h6>
+                <b>{{ product.title }}</b>
+              </h6>
+              <h6>
+                <b>{{ product.price | money }}</b>
+              </h6>
+            </div>
+            <div class="collections__slider__item__description">
+              <p>{{ product.metafields.custom.short_description }}</p>
+            </div>
+          </a>
+        {%- endfor -%}
+      </div>
+    {%- endfor -%}
+  </div>
 
   <div class="collections__slider__navigation">
     <div class="collections__slider__navigation__prev [ js-collection-slider-prev ]">
