--- a/source/sections/collections.scss
+++ b/source/sections/collections.scss
@@ -15,84 +15,151 @@
     padding-bottom: 4rem;
     overflow: hidden;
 
-    &__grid {
+    &.loading {
+        .infinity-loader {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+
+    &__wrap {
+        position: relative;
+    }
+
+    .infinity-loader {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         display: flex;
-        flex-wrap: wrap;
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        justify-content: center;
+        align-items: center;
+        z-index: 88;
+        backdrop-filter: blur(3px);
+        transition: all $fast;
 
-        &--3 {
-            @include media($md) {
-                .collections__item {
-                    width: 33.3333%;
-                    @include aspect(1, 0.9);
-                }
+        svg {
+            max-width: 30rem;
+            background: transparent;
+            fill: none;
+            stroke: #e1edf9;
+            stroke-linecap: round;
+            stroke-width: 8%;
+
+            @media screen and (max-width: 768px) {
+                max-width: 22rem;
             }
+        }
 
-            @include media($xmd) {
-                .collections__item {
-                    @include aspect(1, 0.6);
-                }
-            }
+        use {
+            stroke: var(--green);
+            animation: a 2s linear infinite;
+        }
 
-            @include media($md, max) {
-                .collections__item {
-                    @include aspect(3, 1);
-                    width: 100%;
-                }
+        @keyframes a {
+            to {
+                stroke-dashoffset: 0px;
             }
         }
     }
 
-    &__item {
-        @include aspect(1, 1);
+    &__grid {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         position: relative;
-        width: 25%;
+    }
+
+    &__indicator {
+        position: absolute;
+        bottom: 0;
+        width: 10%;
+        height: 2px;
+        background: var(--green);
+        transition: all $fast;
+        z-index: 3;
+    }
+
+    &__item {
+        position: relative;
+        width: auto;
         cursor: pointer;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        border-bottom: 1px solid var(--green);
+        transition: all $fast;
 
         @include media($md, max) {
-            width: 50%;
-            @include aspect(2, 1);
-        }
+            width: 33.33333333%;
+            justify-content: center;
+            align-items: flex-start;
+            align-content: flex-start;
+            border-bottom: 0px solid var(--green);
 
-        @include media($xs, max) {
-            @include aspect(3, 1);
-            width: 100%;
+            &.active {
+                img {
+                    transform: scale(1.1);
+                }
+            }
         }
 
         &__image {
-            @include full;
+            width: 10rem;
+            height: 10rem;
+            top: 0;
+            left: 0;
+            display: block;
+            transition: all $fast;
 
             img {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
+                width: 10rem;
+                height: 10rem;
+                display: block;
+                transition: all $fast;
             }
 
-            &:before {
-                @include pseudo;
-                position: absolute;
-                left: 0rem;
-                right: 0rem;
-                bottom: 0rem;
-                opacity: 0;
-                transform: scaleY(0.6);
-                transform-origin: 0 100%;
-                top: 50%;
-                transition: all $fast;
-                z-index: 4;
-                background-image: linear-gradient(180deg, rgba(black, 0) 0%, black 100%);
+            @include media($md, max) {
+                width: 8rem;
+                height: 8rem;
+
+                img {
+                    width: 8rem;
+                    height: 8rem;
+                }
             }
         }
 
         &__title {
-            position: absolute;
-            top: calc(100% - 12rem);
-            left: 2rem;
+            width: calc(100% - 12rem);
 
-            h3 {
-                max-width: 18rem;
+            @include media($md, max) {
+                width: 100%;
+            }
+
+            h4 {
+                color: var(--green);
+                font-size: 1.8rem;
+                font-weight: 700;
+                margin-top: 1rem;
+                display: inline-block;
+                padding: 0 2rem 0 0;
+
+                @include media($md) {
+                    white-space: nowrap;
+                    min-width: max-content;
+                }
+
+                @include media($md, max) {
+                    font-size: 1.4rem;
+                    text-align: center;
+                    min-width: 100%;
+                    padding: 0;
+                }
             }
         }
 
@@ -304,7 +371,7 @@
 [data-page-type="list-collections"] {
     &[data-theme="post-partum"],
     &[data-theme="c-section-delivery"],
-    &[data-theme="v-delivery"]{
+    &[data-theme="v-delivery"] {
         .collections__slider__item__quickview path {
             fill: var(--orange);
         }
@@ -335,6 +402,23 @@
     &[data-theme="v-delivery"] {
         background: var(--purple-light) !important;
 
+        .collections__indicator {
+            background: var(--orange);
+        }
+
+        .collections__item {
+            border-color: var(--orange);
+        }
+
+        .infinity-loader {
+            svg {
+                stroke: var(--purple-light);
+            }
+            use {
+                stroke: var(--orange);
+            }
+        }
+
         .collections__slider__item__quickview path {
             fill: var(--orange);
         }
@@ -349,6 +433,7 @@
             fill: var(--orange);
         }
 
+        .collections__item__title h4,
         .collections__slider * {
             color: var(--orange);
         }
@@ -370,6 +455,23 @@
     &[data-theme="breast-feeding"] {
         background: var(--pink-light) !important;
 
+        .collections__indicator {
+            background: var(--green);
+        }
+
+        .collections__item {
+            border-color: var(--green);
+        }
+
+        .infinity-loader {
+            svg {
+                stroke: var(--pink-light);
+            }
+            use {
+                stroke: var(--pink);
+            }
+        }
+
         .collections__slider__item__quickview path {
             fill: var(--pink);
         }
@@ -384,6 +486,7 @@
             fill: var(--pink);
         }
 
+        .collections__item__title h4,
         .collections__slider * {
             color: var(--pink);
         }
@@ -405,6 +508,24 @@
     &[data-theme="pregnancy"] {
         background: var(--blue-light) !important;
 
+        .collections__indicator {
+            background: var(--green);
+        }
+
+        .collections__item {
+            border-color: var(--green);
+        }
+
+        .infinity-loader {
+            svg {
+                stroke: var(--blue-light);
+            }
+            use {
+                stroke: var(--green);
+            }
+        }
+
+        .collections__item__title h4,
         .collections__slider * {
             color: var(--green);
         }
