--- a/sections/main-list-collections.liquid
+++ b/sections/main-list-collections.liquid
@@ -47,7 +47,7 @@
             </div>
             <div class="collection-grid__list__item__image">
               {% if product.featured_image %}
-                {{ product.featured_image | image_url: width: 400 | image_url: height: 400 | image_tag }}
+                {{ product.featured_image | image_url: width: 800, height: 800, crop: 'center' | image_tag }}
               {% else %}
                 <img
                   src="{{ 'placeholder.jpeg' | asset_url }}"
