--- a/assets/style.css
+++ b/assets/style.css
@@ -3154,21 +3154,37 @@ body .choices .choices__list--dropdown .choices__item {
 .collections__item__image {
   width: 10rem;
   height: 10rem;
+  margin-right: -1rem;
   transition: all .5s cubic-bezier(.365, .04, .44, 1);
   display: block;
+  position: relative;
   top: 0;
   left: 0;
 }
 
-.collections__item__image img {
-  width: 10rem;
-  height: 10rem;
+.collections__item__image svg, .collections__item__image img {
+  width: 6rem;
+  height: 6rem;
   transition: all .5s cubic-bezier(.365, .04, .44, 1);
   display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.collections__item__image svg path, .collections__item__image img path {
+  fill: var(--green);
 }
 
 @media only screen and (width <= 767px) {
-  .collections__item__image, .collections__item__image img {
+  .collections__item__image {
+    width: 8rem;
+    height: 8rem;
+    margin-top: 2rem;
+  }
+
+  .collections__item__image svg, .collections__item__image img {
     width: 8rem;
     height: 8rem;
   }
@@ -3370,7 +3386,7 @@ body .choices .choices__list--dropdown .choices__item {
   justify-content: center;
   width: 100%;
   height: 8rem;
-  display: flex;
+  display: none;
 }
 
 .collections__slider__navigation__prev, .collections__slider__navigation__next {
@@ -3433,6 +3449,10 @@ body .choices .choices__list--dropdown .choices__item {
   background: var(--purple-light) !important;
 }
 
+.collections[data-theme="post-partum"] .collections__item__image svg path, .collections[data-theme="c-section-delivery"] .collections__item__image svg path, .collections[data-theme="v-delivery"] .collections__item__image svg path {
+  fill: var(--orange);
+}
+
 .collections[data-theme="post-partum"] .collections__indicator, .collections[data-theme="c-section-delivery"] .collections__indicator, .collections[data-theme="v-delivery"] .collections__indicator {
   background: var(--orange);
 }
@@ -3482,6 +3502,10 @@ body .choices .choices__list--dropdown .choices__item {
   background: var(--pink-light) !important;
 }
 
+.collections[data-theme="breast-feeding"] .collections__item__image svg path {
+  fill: var(--green);
+}
+
 .collections[data-theme="breast-feeding"] .collections__indicator {
   background: var(--green);
 }
@@ -3529,6 +3553,10 @@ body .choices .choices__list--dropdown .choices__item {
 
 .collections[data-theme="pregnancy"] {
   background: var(--blue-light) !important;
+}
+
+.collections[data-theme="pregnancy"] .collections__item__image svg path {
+  fill: var(--green);
 }
 
 .collections[data-theme="pregnancy"] .collections__indicator {
@@ -4996,6 +5024,13 @@ html [data-theme="breast-feeding"] .notyf__message a {
 
 .collection-grid__list__item__description {
   width: 100%;
+}
+
+.collection-grid__list__item__previous {
+  position: absolute;
+  top: 50%;
+  left: 1rem;
+  transform: translateY(-50%);
 }
 
 .collection-grid__marquee {
