--- a/source/sections/banner.scss
+++ b/source/sections/banner.scss
@@ -15,6 +15,28 @@
 .banner {
     position: relative;
 
+    &--no-button {
+        @media screen and (max-width: 768px) {
+            .banner-button {
+                display: none;
+            }
+        }
+    }
+
+    &-overlay {
+        display: none;
+
+        @media screen and (max-width: 768px) {
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 3;
+        }
+    }
+
     &--text {
         .banner-text {
             position: relative;
@@ -25,7 +47,7 @@
 
             @media (max-width: 768px) {
                 margin: 0rem auto -4rem;
-                padding: 16rem 2rem 0rem;
+                padding: 26rem 2rem 2rem;
 
                 h1 {
                     line-height: 6vw !important;
@@ -106,13 +128,14 @@
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
+        z-index: 5;
 
         @include media($md, max) {
             top: 0;
             transform: translateY(0);
-            padding: 6rem 2rem;
+            padding: 6rem 1rem;
             position: relative;
-            padding-top: 20rem;
+            padding-top: 25rem;
         }
     }
 
