--- a/source/sections/collection-grid.scss
+++ b/source/sections/collection-grid.scss
@@ -4,6 +4,57 @@
     padding-bottom: 4rem;
     overflow: hidden;
 
+    .flickity-button {
+        background: rgba(white, 0.3);
+
+        &[disabled] {
+            opacity: 0.1;
+        }
+    }
+
+    .next {
+        opacity: 0;
+        transition: all 333ms;
+        transform: translateX(1rem);
+    }
+
+    .previous {
+        opacity: 0;
+        transition: all 333ms;
+        transform: translateX(-1rem);
+    }
+
+    .flickity-page-dots {
+        bottom: 3rem;
+        background: rgba(white, 0.3);
+        padding: 0.2rem 1rem 0.5rem;
+        border-radius: 22rem;
+        width: auto;
+        margin: 0 auto;
+        left: 50%;
+        backdrop-filter: blur(0.3rem);
+        opacity: 0;
+        transition: all 333ms;
+        transform: translateX(-50%) translateY(1rem);
+
+        .dot {
+            width: 0.8rem;
+            height: 0.8rem;
+            padding: 0;
+            margin: 0 0.1rem;
+            transform: scale(0.6);
+            transition: all 333ms;
+
+            &.is-selected {
+                transform: scale(1);
+            }
+
+            &:before {
+                display: none;
+            }
+        }
+    }
+
     &-wave2,
     &-wave1 {
         @include svg(1366, 768);
@@ -65,6 +116,29 @@
             flex-wrap: wrap;
             position: relative;
 
+            &:hover {
+                .next {
+                    opacity: 1;
+                    transform: none;
+                    
+                    &[disabled] {
+                        opacity: 0.3;
+                    }
+                }
+                .previous {
+                    opacity: 1;
+                    transform: none;
+
+                    &[disabled] {
+                        opacity: 0.3;
+                    }
+                }
+                .flickity-page-dots {
+                    opacity: 1;
+                    transform: translateX(-50%);
+                }
+            }
+
             &--product {
                 padding: 2rem;
                 width: 33.33333333%;
@@ -94,9 +168,28 @@
                 }
             }
 
+            &__images {
+                position: relative;
+
+                .flickity-slider {
+                    .collection-grid__list__item__image {
+                        display: block;
+                    }
+                }
+
+                .flickity-button:disabled {
+                    pointer-events: all;
+                }
+            }
+
             &__image {
                 width: 100%;
                 margin-bottom: 2rem;
+                display: none;
+
+                &[data-index="1"] {
+                    display: block;
+                }
 
                 img {
                     width: 100%;
