Post-partum name change to postpartum

--- a/snippets/mega.liquid
+++ b/snippets/mega.liquid
@@ -74,12 +74,12 @@
           <p class="mega__wrap__column__sublink"><a href="{{ collections.frontpage.url }}">View more</a></p>
 
           {% comment %}
-            post-partum
+            postpartum
           {% endcomment %}
           <h6 class="mega__wrap__column__link">
-            <a class="" href="{{ collections.post-partum.url }}"><b>Postpartum</b></a>
+            <a class="" href="{{ collections.postpartum.url }}"><b>Postpartum</b></a>
           </h6>
-          {% for product in collections['post-partum'].products limit: 2 %}
+          {% for product in collections['postpartum'].products limit: 2 %}
             <p class="mega__wrap__column__sublink">
               <a
                 href="{{ product.url }}"
@@ -92,7 +92,7 @@
             </p>
           {% endfor %}
           <p class="mega__wrap__column__sublink">
-            <a href="{{ collections.post-partum.url }}">View more</a>
+            <a href="{{ collections.postpartum.url }}">View more</a>
           </p>
 
           {% comment %}
