--- a/source/sections/banner.scss
+++ b/source/sections/banner.scss
@@ -1,4 +1,4 @@
-[data-theme="post-partum"],
+[data-theme="postpartum"],
 [data-theme="c-section-delivery"],
 [data-theme="v-delivery"] {
     .banner--text .banner-text h1 {
