--- a/source/sections/product.scss
+++ b/source/sections/product.scss
@@ -249,7 +249,7 @@
 
 html {
     [data-theme="postpartum"],
-    [data-theme="post-partum"],
+    [data-theme="postpartum"],
     [data-theme="c-section-delivery"],
     [data-theme="v-delivery"] {
         background: var(--purple-light);
