--- a/source/sections/quick-view.scss
+++ b/source/sections/quick-view.scss
@@ -207,7 +207,7 @@
 }
 
 html .quickview {
-    &[data-theme="post-partum"],
+    &[data-theme="postpartum"],
     &[data-theme="c-section-delivery"],
     &[data-theme="v-delivery"] {
         .choices {
